--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_dashboard">Grocerease Dashboard</string>
     <string name="title_activity_new_item">New Item</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="item_imageView_contentDescription">Image</string>
 </resources>
